Spaced out menu buttons horizontally, cant do it vertically for some reason. Also fixed background with overflow:auto

--- a/base/finearts/static/finearts/css/style_base.css
+++ b/base/finearts/static/finearts/css/style_base.css
@@ -1,8 +1,15 @@
+html, body {
+    min-height: 100vh;
+    height: 100%;
+    overflow: auto;
+    background-color: #404a57;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     font-size: 17px;
+    height: 100%;
     min-height: 100vh;
-    background-color: #404a57;
 }
 
 .page-buttons {
